Updated project with latest changes

--- a/css/style.css
+++ b/css/style.css
@@ -571,6 +571,9 @@ p {
   gap: 16px;
   align-items: center;
 }
+.platform-center {
+  width: 70vw;
+}
 .platform {
   color: var(--clr-black);
   font-family: var(--ff-primary);
