Updated project with latest changes

--- a/css/style.css
+++ b/css/style.css
@@ -801,7 +801,7 @@ p {
   }
   .guest-center {
     width: 70vw;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
   }
   .arrow-container {
     visibility: visible;
