--- a/css/style.css
+++ b/css/style.css
@@ -1033,23 +1033,23 @@ p {
 .guiding-steps {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 16px;
 }
 .about-cards {
   border-radius: 16px;
-  padding: 36px 24px;
+  padding: 24px 16px;
   background-color: var(--clr-white);
 }
 .about-cards h3 {
   font-family: var(--ff-primary);
   font-weight: 800;
-  font-size: 32px;
+  font-size: 24px;
   line-height: 100%;
   color: var(--clr-white);
   background-color: #212121;
   border-radius: 100%;
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1083,7 +1083,7 @@ p {
   }
   .about-cards {
     display: flex;
-    gap: 30px;
+    gap: 16px;
   }
 }
 
@@ -1188,12 +1188,12 @@ p {
 }
 .impact-card {
   background: #f4eebe;
-  padding: 56px 16px;
+  padding: 24px 16px;
   border-radius: 16px;
 }
 .i-card1 h3 {
   font-family: var(--ff-primary);
-  font-weight: 900;
+  font-weight: 800;
   font-size: 24px;
   color: #1a1a1a;
 }
@@ -1208,7 +1208,7 @@ p {
 .i-card2 h5 {
   font-family: var(--ff-primary);
   font-weight: 900;
-  font-size: 22px;
+  font-size: 14px;
   text-align: center;
   color: #000;
 }
@@ -1222,11 +1222,12 @@ p {
 }
 .i-card5 p {
   font-family: var(--ff-primary);
+  font-size: 14px;
 }
 .i-card5 h3 {
   font-family: var(--ff-primary);
   font-weight: 800;
-  font-size: 32px;
+  font-size: 24px;
   line-height: 120%;
   color: #000;
 }
@@ -1244,10 +1245,10 @@ p {
 
   .i-card1 {
     grid-area: a;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
   }
 
   .i-card2 {
@@ -1260,26 +1261,26 @@ p {
 
   .i-card3 {
     grid-area: c;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
   }
 
   .i-card4 {
     grid-area: d;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
   }
 
   .i-card5 {
     grid-area: e;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
   }
   .impact-center {
     margin: 0 auto;
@@ -1291,7 +1292,7 @@ p {
 .partner-text p {
   font-family: var(--ff-primary);
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 160%;
   letter-spacing: -0.01em;
   color: #e0e0e0;
@@ -1306,26 +1307,92 @@ p {
   color: #212121;
   border: none;
 }
-.partner-container {
-  position: relative;
+.partner-line {
+  width: 160px;
+  height: 2px;
+  background: #e0e0e0;
+  margin-bottom: 24px;
+}
+.partner-title h1 {
+  font-family: var(--ff-primary);
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 140%;
+  color: #f2f2f2;
 }
 .partner-img-container {
   position: relative;
 }
-.partner-img-container img {
-  border-radius: 16px;
-}
-/* .partner-img-II {
-  border: 4px solid white;
+.p-img-2 {
   position: absolute;
-  top: 10%;
-  left: 0%;
-  border-radius: 16px;
-} */
+  top: 0;
+  left: 0;
+  width: 479px;
+  height: 320px;
+}
 
 @media screen and (min-width: 778px) {
-  .partner-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+  .partner-text-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+}
+
+/* FAQ Section */
+
+.faq-title-p {
+  font-family: var(--ff-primary);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #828282;
+}
+.faq-center {
+  background: #fff;
+}
+.faq-title-line {
+  width: 80px;
+  height: 2px;
+  background: #4f4f4f;
+}
+.faq-title-h1 {
+  font-family: var(--ff-primary);
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 120%;
+  color: #000;
+}
+.faq-question-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.faq-question-title h3 {
+  font-family: var(--ff-primary);
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 150%;
+  color: #333;
+}
+.faq-content {
+  font-family: var(--ff-primary);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #828282;
+}
+.faq-question {
+  border: 0.8px solid #828282;
+  border-radius: 16px;
+  padding: 20px 10px;
+}
+.faq-container {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1280px;
+  padding-bottom: 80px;
+}
+.close-faq-content {
+  display: none;
 }
