--- a/css/style.css
+++ b/css/style.css
@@ -120,11 +120,12 @@ p {
   -webkit-transition: var(--transition);
   transition: var(--transition);
   cursor: pointer;
-  font-family: var(--font-family);
-  font-weight: 500;
+  font-family: var(--ff-primary);
+  font-weight: 700;
   font-size: 14px;
   line-height: 100%;
   color: #212121;
+  border: none;
 }
 .btn:hover {
   background: var(--clr-primary-7);
@@ -1014,7 +1015,7 @@ p {
   width: 90vw;
   margin: 0 auto;
   max-width: 1280px;
-  padding-bottom: 80px;
+  padding: 80px 0;
 }
 .guiding-img-container img {
   border-radius: 20px;
@@ -1151,6 +1152,7 @@ p {
 .fact-center {
   width: 90vw;
   margin: 0 auto;
+  padding-bottom: 80px;
 }
 @media screen and (min-width: 778px) {
   .fact-container {
@@ -1185,6 +1187,7 @@ p {
   display: grid;
   grid-template-columns: 1fr;
   gap: 30px;
+  padding-bottom: 80px;
 }
 .impact-card {
   background: #f4eebe;
@@ -1416,5 +1419,61 @@ p {
     width: 55vw;
     margin: 0 auto;
     max-width: 1280px;
+  }
+}
+
+/* Share Experience Styling */
+.share-center {
+  background: #f5f5f5;
+}
+.c-us {
+  border-radius: 999px;
+  width: 300px;
+  height: 300px;
+  background: #111;
+  opacity: 0.9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.share-title-p1 {
+  font-family: var(--ff-primary);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 120%;
+  color: #828282;
+  margin-bottom: 16px;
+}
+.c-us h2 {
+  font-family: var(--ff-primary);
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  color: #b2bf33;
+}
+.share-background {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1280px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 80px 0;
+  gap: 100px;
+}
+.share-btn {
+  margin-top: 32px;
+}
+.share-right {
+  display: flex;
+  justify-content: center;
+}
+@media screen and (min-width: 778px) {
+  .share-background {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 70vw;
+    align-items: center;
   }
 }
